--- a/open-react-template-master/package.json
+++ b/open-react-template-master/package.json
@@ -5,15 +5,22 @@
   "dependencies": {
     "@hashgraph/sdk": "^2.13.1",
     "@react-three/fiber": "^8.0.15",
+    "@solana/buffer-layout": "^4.0.0",
+    "@walletconnect/web3-provider": "^1.7.8",
+    "@web3auth/web3auth": "^1.0.0-alpha.0",
     "classnames": "^2.2.6",
+    "ethers": "^5.6.6",
     "lodash": "^4.17.15",
+    "magic-sdk": "^8.1.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-ga": "^2.7.0",
+    "react-ipfs-uploader": "^1.2.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "sass": "^1.49.7",
-    "three": "^0.140.2"
+    "three": "^0.140.2",
+    "web3": "^1.7.3"
   },
   "repository": {
     "type": "git",
